[GUI] Fix spacing on thumbnails

--- a/owmods_gui/frontend/src/styles.css
+++ b/owmods_gui/frontend/src/styles.css
@@ -45,6 +45,10 @@ body {
     border-radius: 4px;
 }
 
+.mod-thumb {
+    display: block;
+}
+
 .mod-thumb.disabled {
     filter: grayscale(100%) !important;
 }
